Feature/scala 3 migration (#2)
* add git ignore

* Scala 3.3.1 migration sbt 1.9.7